[workspace]
resolver = "2"

members = [
    "certval",
    "pkiprocmacros",
    "pittv3",
    "pittv3-gui",
    "pittv3-gui-lib",
    "pittv3-lib",
    "pittv3-wasm",
]

[profile.bench]
debug = true

# Opt-in release build with debug info for profiling and symbolicated backtraces from the native
# tools: cargo build --profile release-dbg
[profile.release-dbg]
inherits = "release"
debug = true

# Used by trunk for pittv3-wasm browser builds (trunk build --release --cargo-profile wasm-release):
# optimizes for size rather than the speed the native release profile favors.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true

[patch.crates-io]
# Temporary until RustCrypto publishes x509-ocsp RCs. The specific commit is pinned by Cargo.lock;
# do not `cargo update` this patch until the RCs land (HEAD has drifted incompatible with x509-cert).
x509-ocsp = { git = "https://github.com/RustCrypto/formats.git" }

# https://github.com/RustCrypto/signatures/pull/1259
# https://github.com/RustCrypto/signatures/pull/1261
ml-dsa = { git = "https://github.com/RustCrypto/signatures.git" }
