[workspace]
resolver = "2"

members = [
    "certval",
    "pkiprocmacros",
    "pittv3",
    "pittv3-gui",
    "pittv3-gui-lib",
    "pittv3-lib",
    "pittv3-wasm",
]

[profile.bench]
debug = true

# Opt-in release build with debug info for profiling and symbolicated backtraces from the native
# tools: cargo build --profile release-dbg
[profile.release-dbg]
inherits = "release"
debug = true

# Used by trunk for pittv3-wasm browser builds (trunk build --release --cargo-profile wasm-release):
# optimizes for size rather than the speed the native release profile favors.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true

[patch.crates-io]
# x509-ocsp has no 0.3 crates.io release yet (max published 0.2.1), so pull it from formats.git to
# match the now-published x509-cert 0.3.0. Drop this patch once x509-ocsp 0.3 publishes.
# (ml-dsa dropped 2026-07-16 — 0.1.1 is now on crates.io.)
x509-ocsp = { git = "https://github.com/RustCrypto/formats.git" }
