[package]
name = "certval"
version = "0.1.4"
description = """
Pure Rust implementation of X.509 Public Key Infrastructure Certificate validation as described in [RFC 5280] and
as augmented by [RFC 5937], including support for certification path building and revocation status determination.
"""
authors = [""]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/carl-wallace/rust-pki"
categories = ["cryptography", "pki", "no-std"]
keywords = ["crypto", "x.509", "OCSP"]
readme = "README.md"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-cert = { version = "0.3.0", default-features = false, features = ["hazmat","pem"] }
const-oid = { version = "0.10.2", default-features = false, features = ["db"] }
cms = "0.3.0-pre.2"
der = { version="0.8.1", features = ["alloc", "derive", "flagset", "oid"] }
x509-ocsp = { version = "0.3.0-pre" }
base64ct = { version="1.8.3", features = ["alloc"], optional=true }
spki = { version = "0.8.0", default-features = false, features = ["alloc"] }
pqckeys = { git = "https://github.com/carl-wallace/pqckeys", branch = "kemri", optional=true }
pem-rfc7468 = { version="1.0.0", features = ["alloc"]}
signature = { version = "3.0.0" }

pkiprocmacros = { path = "../pkiprocmacros"}

ecdsa = {version = "0.17.0", default-features = false, features = ["der"]}
p256 = {version = "0.14.0", default-features = false, features = ["ecdsa"]}
p384 = {version = "0.14.0", default-features = false, features = ["ecdsa"]}
p521 = {version = "0.14.0", default-features = false, features = ["ecdsa"]}
ed25519-dalek = { version = "3.0.0", default-features = false, features = ["fast", "zeroize", "pkcs8"], optional = true }
rsa = {version = "0.10.0-rc.18", default-features = false, optional=true, features = ["encoding"]}
sha1 = {version = "0.11.0", default-features = false}
sha2 = {version = "0.11.0", default-features = false, features = ["oid"] }

cfg-if = "1.0.4"
# serde feature is added to std, revocation,std and remote
flagset = { version = "0.4.7", package = "flagset", default-features = false }
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
readonly = "0.2.13"
serde = {version = "1.0.228", default-features = false, features = ["derive", "alloc"]}
subtle-encoding = {version = "0.5.1", default-features = false, features = ["hex", "alloc"]}

bitvec = { version = "1.1.1", optional = true }
ciborium = {version = "0.2.2", default-features = false }
cidr = { version = "0.3.2", optional = true }
log = {version = "0.4.33", default-features = false}
ndarray = {version = "0.17.2", optional = true, default-features = false}
reqwest = { version = "0.13.4", features = ["blocking"], optional = true}
getrandom = { version = "0.3", optional = true}
serde_json = {version = "1.0.150", optional = true, default-features = false, features = ["alloc"] }
url = {version = "2.5.8", optional = true}
walkdir = { version = "2.5.0", optional = true}

# regex documentation notes a std feature that at some point in the future could be omitted
# to enable no_std support, but for now std is required, so mark it optional
regex = {version = "1.13.1", optional = true}

ml-dsa = { version = "0.1.1", optional = true }
sha3 = { version = "0.11.0", default-features = false, optional = true }
slh-dsa = { version = "0.2.0-rc.5", optional = true }

webpki-roots = {version = "0.25.4", optional = true}
hex-literal = "1.1.0"

[dev-dependencies]
tempfile = "3.27.0"
tokio-test = "0.4.5"
pretty_env_logger = "0.5"
tokio = { version = "1.52.3", features = ["full", "macros", "time", "rt-multi-thread"] }


# There are five feature gates:
#   - no-default-features (i.e., no-std) provides full path validation without file system support, network or thread safety (and no revocation support)
#   - revocation adds support for verifying CRLs and OCSP responses presented to library (presumably obtained via stapling at higher protocol level)
#   - std adds file-based utilities (including graph building) and support for multi-threading (no revocation support)
#   - revocation,std adds revocation support alongside file-based utilities and support for multi-threading
#   - remote adds support for dynamic path building, CRL fetching and OCSP
# Default is set to be the most all encompassing (i.e., remote,webpki).
# webpki can be paired with any other feature and simply adds a means of initializing a TaSource from the webpki-roots crate
[features]
default = ["remote", "webpki"]
revocation = ["dep:ndarray"]
std = ["dep:ndarray", "dep:base64ct", "dep:walkdir", "dep:url", "dep:serde_json", "serde/rc",  "flagset/serde", "dep:regex", "lazy_static/spin", "dep:bitvec", "dep:cidr", "der/std"]
remote = ["revocation", "std", "reqwest", "dep:getrandom", "lazy_static/spin"]
pqc = ["ml-dsa", "sha3", "slh-dsa", "pqckeys"]
webpki = ["webpki-roots"]
rsa = ["dep:rsa"]
eddsa = ["dep:ed25519-dalek"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
