[package]
name = "pittv3_gui_lib"
version = "0.1.3"
description = """
Shared user interface components for GUI frontends to the PKI Interoperability Test Tool v3 (PITTv3),
which can be used to build and validate certification paths using different sets of trust anchors,
intermediate CA certificates and end entity certificates.
"""
authors = [""]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/carl-wallace/rust-pki"
categories = ["cryptography", "pki"]
keywords = ["crypto", "x.509", "OCSP"]
readme = "README.md"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pittv3_lib = { path = "../pittv3-lib", default-features = false }
certval = { path = "../certval", default-features = false }

dioxus = "0.7.9"

log = {version = "0.4.29"}
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

anyhow = {version = "1.0.100", optional = true}
home = {version = "0.5.11", optional = true}
log4rs = {version = "1.4.0", default-features = false, optional = true}

# Feature gates mirror certval where applicable:
#   - no-default-features provides full path validation without file system support, network or thread safety
#     (and no revocation support). This is mostly targeted at WASM builds.
#   - revocation adds support for verifying CRLs and OCSP responses presented to library (presumably obtained via stapling at higher protocol level)
#   - std adds file-based utilities, including persistence of settings and arguments
#   - remote adds support for dynamic path building, CRL fetching and OCSP
#   - webpki can be paired with any other feature and simply adds a means of initializing a TaSource from the webpki-roots crate
#   - gui_desktop adds support used only by desktop GUI frontends
# Default is set to be the least encompassing (i.e., for WASM).
[features]
default = []
revocation = ["certval/revocation", "pittv3_lib/revocation"]
std = ["revocation", "certval/std", "pittv3_lib/std", "dep:home"]
remote = ["certval/remote", "pittv3_lib/remote", "revocation", "std"]
pqc = ["certval/pqc", "pittv3_lib/pqc"]
webpki = ["certval/webpki", "pittv3_lib/webpki"]
gui_desktop = ["std", "dep:log4rs", "dep:anyhow"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
