[package]
name = "pittv3_lib"
version = "0.1.3"
description = """
Library underpinning the PKI Interoperability Test Tool v3 (PITTv3), which can be used to build and
validate certification paths using different sets of trust anchors, intermediate CA certificates and
end entity certificates. This crate provides the argument structure and processing logic shared by
the PITTv3 CLI and GUI frontends.
"""
authors = [""]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/carl-wallace/rust-pki"
categories = ["cryptography", "pki", "no-std"]
keywords = ["crypto", "x.509", "OCSP"]
readme = "README.md"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-cert = { version = "0.3.0-rc.4", default-features = false, features = ["pem"] }
const-oid = { version = "0.10.2", default-features = false, features = ["db"] }
der = { version="0.8.0", features = ["alloc", "derive", "flagset", "oid"] }
spki = { version = "0.8.0-rc.4", default-features = false, features = ["alloc"] }
pem-rfc7468 = { version="1.0.0", features = ["alloc"]}

certval = { path = "../certval", default-features = false}
rsa = { version = "0.10.0-rc.15", optional = true, features = ["encoding"] }
sha1 = {version = "0.11.0-rc.5", default-features = false, features = ["oid"]}
sha2 = {version = "0.11.0-rc.5", default-features = false, features = ["oid"] }

async-recursion = "1.1.1"
bytes = "1.11.1"
ciborium = {version = "0.2.2", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

csv = {version = "1.4.0", optional = true, default-features = false}
log = {version = "0.4.29"}

walkdir = { version = "2.5.0", optional = true}

[dev-dependencies]
hex-literal = "1.1.0"
tempfile = "3.26.0"
tokio-test = "0.4.5"

# Similar to certval, there are six feature gates (one more than certval):
#   - no-default-features (i.e., no-std) provides full path validation without file system support, network or thread safety (and no revocation support)
#   - revocation adds support for verifying CRLs and OCSP responses presented to library (presumably obtained via stapling at higher protocol level)
#   - std adds file-based utilities (including graph building) and support for multi-threading (no revocation support)
#   - revocation,std adds revocation support alongside file-based utilities and support for multi-threading
#   - remote adds support for dynamic path building, CRL fetching and OCSP
#   - std-app provides the Pittv3 app with std support while building certval with no-default-features
# Default is set to be the most all encompassing (i.e., remote,webpki).
# webpki can be paired with any other feature and simply adds a means of initializing a TaSource from the webpki-roots crate
[features]
default = ["remote", "webpki"]
revocation = ["certval/revocation"]
std_app = ["certval/revocation"]
std = ["std_app", "certval/std", "revocation", "walkdir", "csv"]
remote = ["certval/remote", "revocation", "std"]
pqc = ["certval/pqc"]
webpki = ["certval/webpki"]
sha1_sig = ["rsa"]
rsa = ["certval/rsa", "dep:rsa"]
eddsa = ["certval/eddsa"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
